--- a/configuration-loader/route-configuration.html
+++ b/configuration-loader/route-configuration.html
@@ -66,21 +66,22 @@
     <!-- top navbar -->
     <div id="header" class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".sidebar-nav">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <div class="navbar-brand">
-                    <a title="Link to the Slender GitHub repository"
-                       href="https://github.com/alanpich/slender"
-                       target="_blank">Slender</a>/docs
-                </div>
-
-            </div>
-
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".sidebar-nav">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <div class="navbar-brand">
+            <a title="Link to the Slender GitHub repository"
+               href="https://github.com/alanpich/slender"
+               target="_blank">Slender</a>/docs
         </div>
+
+    </div>
+
+</div>
+
     </div>
 
     <div class="container">
@@ -89,6 +90,9 @@
             <!-- sidebar -->
             <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
                 <ul class="tree">
+    <li>
+        <a href="../">Overview</a>
+    </li>
     <li class="folder">
         <label>Introduction</label>
         <ul>
@@ -164,8 +168,9 @@
 
             <!-- main area -->
             <div class="col-xs-12 col-sm-9" id="page">
-                <h1>Route Configuration</h1>
-                <p>Slender core comes with the <strong>route-registrar</strong> module which makes it easy to
+                
+                    <h1>Route Configuration</h1>
+                    <p>Slender core comes with the <strong>route-registrar</strong> module which makes it easy to
 set up http routes from within config files.</p>
 <p>RouteRegistrar routing if centered around the idea of <strong>Controllers</strong> and <strong>Actions</strong> that
 you will probably recognise from other frameworks.</p>
@@ -244,7 +249,7 @@ container.</p>
 }
 </code></pre>
 
-
+                
             </div>
             <!-- /.col-xs-12 main -->
         </div>
