--- a/configuration-loader/service-configuration.html
+++ b/configuration-loader/service-configuration.html
@@ -66,21 +66,22 @@
     <!-- top navbar -->
     <div id="header" class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".sidebar-nav">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <div class="navbar-brand">
-                    <a title="Link to the Slender GitHub repository"
-                       href="https://github.com/alanpich/slender"
-                       target="_blank">Slender</a>/docs
-                </div>
-
-            </div>
-
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".sidebar-nav">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <div class="navbar-brand">
+            <a title="Link to the Slender GitHub repository"
+               href="https://github.com/alanpich/slender"
+               target="_blank">Slender</a>/docs
         </div>
+
+    </div>
+
+</div>
+
     </div>
 
     <div class="container">
@@ -89,6 +90,9 @@
             <!-- sidebar -->
             <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
                 <ul class="tree">
+    <li>
+        <a href="../">Overview</a>
+    </li>
     <li class="folder">
         <label>Introduction</label>
         <ul>
@@ -164,8 +168,9 @@
 
             <!-- main area -->
             <div class="col-xs-12 col-sm-9" id="page">
-                <h1>Services &amp; Factories</h1>
-                <p>Slim, and Slender by inheritance, use Pimple as an IoC container. It is very powerful, but can be
+                
+                    <h1>Services &amp; Factories</h1>
+                    <p>Slim, and Slender by inheritance, use Pimple as an IoC container. It is very powerful, but can be
 cumbersome to configure. Slender ConfigLoader helps to automate this process by allowing service
 and factory classes to be registered inside config files.</p>
 <h2 id="services">Services</h2>
@@ -206,7 +211,7 @@ $myService === $secondTime; // FALSE
 return value of the class&#39; <code>create()</code> method will be used instead of the class itself.</p>
 <p>This allows runtime configuration of service classes</p>
 
-
+                
             </div>
             <!-- /.col-xs-12 main -->
         </div>
