--- a/core-modules/introduction.html
+++ b/core-modules/introduction.html
@@ -66,21 +66,22 @@
     <!-- top navbar -->
     <div id="header" class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".sidebar-nav">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <div class="navbar-brand">
-                    <a title="Link to the Slender GitHub repository"
-                       href="https://github.com/alanpich/slender"
-                       target="_blank">Slender</a>/docs
-                </div>
-
-            </div>
-
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".sidebar-nav">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <div class="navbar-brand">
+            <a title="Link to the Slender GitHub repository"
+               href="https://github.com/alanpich/slender"
+               target="_blank">Slender</a>/docs
         </div>
+
+    </div>
+
+</div>
+
     </div>
 
     <div class="container">
@@ -89,6 +90,9 @@
             <!-- sidebar -->
             <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
                 <ul class="tree">
+    <li>
+        <a href="../">Overview</a>
+    </li>
     <li class="folder">
         <label>Introduction</label>
         <ul>
@@ -164,8 +168,9 @@
 
             <!-- main area -->
             <div class="col-xs-12 col-sm-9" id="page">
-                <h1>Introduction to the Core Modules</h1>
-                <p>In an effort to eat its own dogfood, the majority of core Slender
+                
+                    <h1>Introduction to the Core Modules</h1>
+                    <p>In an effort to eat its own dogfood, the majority of core Slender
 functionality is loaded via the public Module system.</p>
 <h2 id="the-services">The Services</h2>
 <h3 id="event-manager">Event Manager</h3>
@@ -185,7 +190,7 @@ event-manager   | Slender\Interfaces\CoreService\EventManagerInterface
 module-loader   | Slender\Interfaces\CoreService\ModuleLoaderInterface
 </code></pre>
 
-
+                
             </div>
             <!-- /.col-xs-12 main -->
         </div>
