--- a/modules/example-module-config.html
+++ b/modules/example-module-config.html
@@ -66,21 +66,22 @@
     <!-- top navbar -->
     <div id="header" class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".sidebar-nav">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <div class="navbar-brand">
-                    <a title="Link to the Slender GitHub repository"
-                       href="https://github.com/alanpich/slender"
-                       target="_blank">Slender</a>/docs
-                </div>
-
-            </div>
-
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".sidebar-nav">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <div class="navbar-brand">
+            <a title="Link to the Slender GitHub repository"
+               href="https://github.com/alanpich/slender"
+               target="_blank">Slender</a>/docs
         </div>
+
+    </div>
+
+</div>
+
     </div>
 
     <div class="container">
@@ -89,6 +90,9 @@
             <!-- sidebar -->
             <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
                 <ul class="tree">
+    <li>
+        <a href="../">Overview</a>
+    </li>
     <li class="folder">
         <label>Introduction</label>
         <ul>
@@ -164,15 +168,10 @@
 
             <!-- main area -->
             <div class="col-xs-12 col-sm-9" id="page">
-                <h1>Example Module Config Files</h1>
-                <p>Here are example module configuration files in all supported languages</p>
-<ul>
-<li><a href="#php">PHP</a></li>
-<li><a href="#yaml">YAML</a></li>
-<li><a href="#json">JSON</a></li>
-</ul>
-<h2 id="examples">Examples</h2>
-<h3 id="yaml">YAML</h3>
+                
+                    <h1>Example Module Config Files</h1>
+                    <p>Here are example module configuration files in all supported languages</p>
+<h2 id="yaml">YAML</h2>
 <pre><code class="lang-yaml">########################################
 #  Example Module config file
 #      ./module/my-module/slender.module.yml
@@ -203,7 +202,7 @@ module:
    # Would look for MyVendor/MyModule/MyClass in ./src/MyClass.php
       MyVendor/MyModule: ./src
 </code></pre>
-<h3 id="php">PHP</h3>
+<h2 id="php">PHP</h2>
 <pre><code class="lang-php">&lt;?php
 /**
  * Example Module config file
@@ -245,7 +244,7 @@ return array(
 
 );
 </code></pre>
-<h3 id="json">JSON</h3>
+<h2 id="json">JSON</h2>
 <pre><code class="lang-javascript">// ./module/my-module/slender.module.json
 {
     &quot;module&quot;: {
@@ -265,7 +264,7 @@ return array(
 }
 </code></pre>
 
-
+                
             </div>
             <!-- /.col-xs-12 main -->
         </div>
