--- a/modules/module-path-resolver.html
+++ b/modules/module-path-resolver.html
@@ -66,21 +66,22 @@
     <!-- top navbar -->
     <div id="header" class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".sidebar-nav">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <div class="navbar-brand">
-                    <a title="Link to the Slender GitHub repository"
-                       href="https://github.com/alanpich/slender"
-                       target="_blank">Slender</a>/docs
-                </div>
-
-            </div>
-
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".sidebar-nav">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <div class="navbar-brand">
+            <a title="Link to the Slender GitHub repository"
+               href="https://github.com/alanpich/slender"
+               target="_blank">Slender</a>/docs
         </div>
+
+    </div>
+
+</div>
+
     </div>
 
     <div class="container">
@@ -89,6 +90,9 @@
             <!-- sidebar -->
             <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
                 <ul class="tree">
+    <li>
+        <a href="../">Overview</a>
+    </li>
     <li class="folder">
         <label>Introduction</label>
         <ul>
@@ -164,8 +168,9 @@
 
             <!-- main area -->
             <div class="col-xs-12 col-sm-9" id="page">
-                <h1>Module Path Resolver</h1>
-                <p>The Module Path Resolver service is used internally to find the filesystem directory
+                
+                    <h1>Module Path Resolver</h1>
+                    <p>The Module Path Resolver service is used internally to find the filesystem directory
 that contains a Slender module, and returns the path to a module directory.</p>
 <p>A resolver service MUST implement <code>Slender\Interfaces\ModuleResolverInterface</code></p>
 <p>By default, Slender uses a stack to allow chaining of multiple resolvers
@@ -193,7 +198,7 @@ modules:
   - MyVendor\MyNamespace
 </code></pre>
 
-
+                
             </div>
             <!-- /.col-xs-12 main -->
         </div>
