--- a/configuration-loader/default-configuration.html
+++ b/configuration-loader/default-configuration.html
@@ -97,6 +97,7 @@
         <label>Introduction</label>
         <ul>
             <li><a href="../setup/overview.html">Overview</a></li>
+            <li><a href="../setup/application-process-flow.html">Process Flow</a></li>
             <li><a href="../setup/folder-structure.html">Folder Structure</a></li>
             <li><a href="../setup/configuration.html">Configuration</a></li>
             <li><a href="../setup/app.html">Application Initialization</a></li>
@@ -125,13 +126,10 @@
 
 
     <li class="folder">
-        <label>Core Modules</label>
+        <label>Core Services</label>
         <ul>
             <li><a href="../core-modules/introduction.html">Introduction</a></li>
-            <li class="folder">
-                <label>Route Registrar</label>
-                <ul><code>@TODO</code></ul>
-            </li>
+            <li><a href="../core-modules/route-registrar.html">Route Registrar</a></li>
             <li class="folder">
                 <label>Service Registrar</label>
                 <ul><code>@TODO</code></ul>
