--- a/core-modules/introduction.html
+++ b/core-modules/introduction.html
@@ -97,6 +97,7 @@
         <label>Introduction</label>
         <ul>
             <li><a href="../setup/overview.html">Overview</a></li>
+            <li><a href="../setup/application-process-flow.html">Process Flow</a></li>
             <li><a href="../setup/folder-structure.html">Folder Structure</a></li>
             <li><a href="../setup/configuration.html">Configuration</a></li>
             <li><a href="../setup/app.html">Application Initialization</a></li>
@@ -125,13 +126,10 @@
 
 
     <li class="folder">
-        <label>Core Modules</label>
+        <label>Core Services</label>
         <ul>
             <li><a href="../core-modules/introduction.html">Introduction</a></li>
-            <li class="folder">
-                <label>Route Registrar</label>
-                <ul><code>@TODO</code></ul>
-            </li>
+            <li><a href="../core-modules/route-registrar.html">Route Registrar</a></li>
             <li class="folder">
                 <label>Service Registrar</label>
                 <ul><code>@TODO</code></ul>
@@ -169,9 +167,13 @@
             <!-- main area -->
             <div class="col-xs-12 col-sm-9" id="page">
                 
-                    <h1>Introduction to the Core Modules</h1>
+                    <h1>Introduction to the Core Services</h1>
                     <p>In an effort to eat its own dogfood, the majority of core Slender
-functionality is loaded via the public Module system.</p>
+functionality is loaded via the public Module system. Some services,
+however, are required before the ModuleLoader has been initialized and
+so must be included in the Slender core.</p>
+<p>These services are required for Slender to run, but you can override them
+with your own classes as long as they implement the relevant interface.</p>
 <h2 id="the-services">The Services</h2>
 <h3 id="event-manager">Event Manager</h3>
 <p><code>Slender\Interfaces\EventManagerInterface</code></p>
