--- a/configuration-loader/service-configuration.html
+++ b/configuration-loader/service-configuration.html
@@ -177,10 +177,20 @@ application. The are lazy-loaded; not created until the first time
 they are asked for.</p>
 <p>Registering services from config files is easy, simply add them to the
 <code>services</code> block in the form $identifier=&gt;$class</p>
-<pre><code class="lang-yaml">...
+<pre><code class="lang-yaml"># Services are registered as Shared resources in the Slim DI container
+# If the class registered implements Slender\FactoryInterface then
+# the factory will be run to create the instance, otherwise the
+# class listed will be initialized
 services:
-    MyService: MyVendor/MyNamespace/MyService
-    OtherService: MyVendor/MyNamespace/OtherServiceFactory
+    MyService: MyModule\ServiceFactory
+
+# Factories are registered as resources in the Slim DI container.
+# A new instance is created each time this object is requested.
+# If the class registered implements FactoryInterface, then the
+# object returned will be the result of the factory method, not
+# the factory class
+factories:
+    NewObject:  MyModule\Object
 </code></pre>
 <p>Once a service is registered, you can retrieve it using the $app IoC container:</p>
 <pre><code class="lang-php">/** @var $app Slender\App */
