--- a/index.html
+++ b/index.html
@@ -192,9 +192,7 @@
 
         <p>Slender is lightweight but rapid application development framework for PHP (&gt;=5.4)</p>
 <p>Built on top of the excellent <a href="http://slimframework.com">Slim</a> micro-framework, Slender
-aims to provide all the tools you&#39;d expect from a full-blown application framework like
-Zend or Symfony, but without a lot of the bloat and endless bootstrapping that can waste
-a lot of time when trying to add a new feature to your app.</p>
+provides a toolkit for quickly putting together a modular PHP application.</p>
 <h2 id="features">Features</h2>
 <div class="col-md-6">
     <h4>Configuration Manager</h4>
